--- a/_posts/2021-05-27-koopman.md
+++ b/_posts/2021-05-27-koopman.md
@@ -93,7 +93,7 @@ Nella prossima parte di questa piccola presentazione sull'operatore di Koopman c
 
 [3] Khalil, H. K., & Grizzle, J. W. (2002). Nonlinear systems (Vol. 3). Upper Saddle River, NJ: Prentice hall.
 
-[4] Koopman, B. O. (1931). Hamiltonian systems and transformation in Hilbert space. Proceedings of the national academy of sciences of the united states of america, 17(5), 315.
+[4] Koopman, B. O. (1931). Hamiltonian systems and transformation in Hilbert space. Proceedings of the national academy of sciences of the United States of America, 17(5), 315.
 Chicago	
 
 [5] Mezić, I. (2005). Spectral properties of dynamical systems, model reduction and decompositions. Nonlinear Dynamics, 41(1), 309-325.
